# sourcetraildb

./: .gitignore  CMakeLists.txt  README.md  Writer.cc  Writer.h  cpp_example.ts  hello.cc  hello.js  index.ts  init.cc  package-lock.json  package.json  tsconfig.json
data/: example.cpp
src/: builder.ts  index.ts
